--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <a href="produtos.html">Produtos</a>
             <a href="index.html#lancamentos">Lançamentos</a>
             <a href="index.html" target="_self">Voltar à Loja</a>
+            <a href="contato.html" target="_self">Contato</a>
         </nav>
     </header>
 
@@ -111,4 +112,5 @@
         }
     </script>
 </body>
+
 </html>
