--- a/contato.html
+++ b/contato.html
@@ -48,7 +48,7 @@
                         @sedumodaintima
                     </a>
                     <h3>Bem-Estar & Inspiração</h3>
-                    <p>Siga-nos para dicas de bem-estar, novidades, e conteúdo sobre intimidade e relacionamentos.</p>
+                    <p>Siga-nos para dicas, novidades, e conteúdo sobre intimidade e relacionamentos.</p>
                     
                     
                     <p class="card-note">Conteúdo sugestivo e elegante (18+).</p>
@@ -77,7 +77,7 @@
             </div>
             <div class="footer-section">
                 <h4>Discretividade Garantida</h4>
-                <p>O nome da empresa na fatura é: [NOME GENÉRICO DA EMPRESA LTDA]</p>
+                <p>Sedução - Moda Íntima e Sex Shop</p>
             </div>
         </div>
         <p class="copyright">&copy; 2025 Sedução. Todos os direitos reservados.</p>
@@ -88,3 +88,4 @@
     </script>
 </body>
 </html>
+
