--- a/contato.html
+++ b/contato.html
@@ -80,7 +80,7 @@
                 <p>Sedução - Moda Íntima e Sex Shop</p>
             </div>
         </div>
-        <p class="copyright">&copy; 2025 Sedução. Todos os direitos reservados.</p>
+        <p class="copyright">&copy; 2025 Grupo TS. Todos os direitos reservados.</p>
     </footer>
 
     <script>
@@ -88,4 +88,5 @@
     </script>
 </body>
 </html>
+
 
