--- a/produtos.html
+++ b/produtos.html
@@ -65,9 +65,9 @@
                 <button class="btn-whatsapp" onclick="enviarParaWhatsapp(this)">Pedir via WhatsApp</button>
             </div>
 
-            <div class="product-card" data-nome="Hot Ball Xana Loka" data-preco="12,99" data-codigo="GE-006">
-                <img src="img/Hot Ball Xana Loka.png" alt="Hot Ball Xana Loka">
-                <h3>Hot Ball Xana Loka</h3>
+            <div class="product-card" data-nome="Xana Loka Gel Excitante Vibrações 15G Hot" data-preco="12,99" data-codigo="GE-006">
+                <img src="img/Xana Loka Gel Excitante Vibrações 15G Hot.png" alt="Xana Loka Gel Excitante Vibrações 15G Hot">
+                <h3>Xana Loka Gel Excitante Vibrações 15G Hot</h3>
                 <p class="price">R$ 12,99</p>
                 <button class="btn-whatsapp" onclick="enviarParaWhatsapp(this)">Pedir via WhatsApp</button>
             </div>
@@ -130,3 +130,4 @@
 </body>
 
 </html>
+
