--- a/produtos.html
+++ b/produtos.html
@@ -66,7 +66,7 @@
             </div>
 
             <div class="product-card" data-nome="Xana Loka Gel Excitante Vibrações 15G Hot" data-preco="12,99" data-codigo="GE-006">
-                <img src="img/Xana Loka Gel Excitante Vibrações 15G Hot.png" alt="Xana Loka Gel Excitante Vibrações 15G Hot">
+                <img src="img/Xana Loka Gel Excitante Vibrações 15G Hot.jpg" alt="Xana Loka Gel Excitante Vibrações 15G Hot">
                 <h3>Xana Loka Gel Excitante Vibrações 15G Hot</h3>
                 <p class="price">R$ 12,99</p>
                 <button class="btn-whatsapp" onclick="enviarParaWhatsapp(this)">Pedir via WhatsApp</button>
@@ -130,4 +130,5 @@
 </body>
 
 </html>
+
 
