--- a/produtos.html
+++ b/produtos.html
@@ -71,6 +71,48 @@
                 <p class="price">R$ 12,99</p>
                 <button class="btn-whatsapp" onclick="enviarParaWhatsapp(this)">Pedir via WhatsApp</button>
             </div>
+
+            <div class="product-card" data-nome="Pirocadura Excitante Masculino 18ml" data-preco="15,00" data-codigo="GE-006">
+                <img src="img/Pirocadura Excitante Masculino 18 ml.jpg" alt="Pirocadura Excitante Masculino 18 ml">
+                <h3>Pirocadura Excitante Masculino 18 ml</h3>
+                <p class="price">R$ 15,00</p>
+                <button class="btn-whatsapp" onclick="enviarParaWhatsapp(this)">Pedir via WhatsApp</button>
+            </div>
+
+            <div class="product-card" data-nome="Diaba Excitante Feminino Bisnaga 15ml" data-preco="15,00" data-codigo="GE-006">
+                <img src="img/Diaba Excitante Feminino Bisnaga 15ml.jpg" alt="Diaba Excitante Feminino Bisnaga 15ml">
+                <h3>Diaba Excitante Feminino Bisnaga 15ml</h3>
+                <p class="price">R$ 15,00</p>
+                <button class="btn-whatsapp" onclick="enviarParaWhatsapp(this)">Pedir via WhatsApp</button>
+            </div>
+
+            <div class="product-card" data-nome="Gel Lubrificante Íntimo Morango 50G Rilex" data-preco="17,00" data-codigo="GE-006">
+                <img src="img/Gel Lubrificante Íntimo Morango 50G Rilex.jpg" alt="Gel Lubrificante Íntimo Morango 50G Rilex">
+                <h3>Gel Lubrificante Íntimo Morango 50G Rilex</h3>
+                <p class="price">R$ 17,00</p>
+                <button class="btn-whatsapp" onclick="enviarParaWhatsapp(this)">Pedir via WhatsApp</button>
+            </div>
+
+            <div class="product-card" data-nome="Retarden Bisnaga Gel Funcional Masculino 15Ml Garji" data-preco="13,00" data-codigo="GE-006">
+                <img src="img/Retarden Bisnaga Gel Funcional Masculino 15Ml Garji.jpg" alt="Retarden Bisnaga Gel Funcional Masculino 15Ml Garji">
+                <h3>Retarden Bisnaga Gel Funcional Masculino 15Ml Garji</h3>
+                <p class="price">R$ 13,00</p>
+                <button class="btn-whatsapp" onclick="enviarParaWhatsapp(this)">Pedir via WhatsApp</button>
+            </div>
+
+            <div class="product-card" data-nome="Retarden Pote Gel Funcional Masculino 7G Garji" data-preco="11,00" data-codigo="GE-006">
+                <img src="img/Retarden Pote Gel Funcional Masculino 7G Garji.jpg" alt="Retarden Pote Gel Funcional Masculino 7G Garji">
+                <h3>Retarden Pote Gel Funcional Masculino 7G Garji</h3>
+                <p class="price">R$ 11,00</p>
+                <button class="btn-whatsapp" onclick="enviarParaWhatsapp(this)">Pedir via WhatsApp</button>
+            </div>
+
+            <div class="product-card" data-nome="Tiger & Dragon Pote Chinesinha 7G Garji" data-preco="13,00" data-codigo="GE-006">
+                <img src="img/Tiger & Dragon Pote Chinesinha 7G Garji.jpg" alt="Tiger & Dragon Pote Chinesinha 7G Garji">
+                <h3>Tiger & Dragon Pote Chinesinha 7G Garji</h3>
+                <p class="price">R$ 13,00</p>
+                <button class="btn-whatsapp" onclick="enviarParaWhatsapp(this)">Pedir via WhatsApp</button>
+            </div>
             
             </section>
         
@@ -130,5 +172,6 @@
 </body>
 
 </html>
+
 
 
