--- a/produtos.html
+++ b/produtos.html
@@ -261,17 +261,16 @@
             <div class="footer-section">
                 <h4>Atendimento</h4>
                 <ul>
-                    <li><a href="#">Trocas e Devoluções</a></li>
                     <li><a href="#">Política de Privacidade</a></li>
                     <li><a href="contato.html" target="_blank">Fale Conosco</a></li>
                 </ul>
             </div>
             <div class="footer-section">
                 <h4>Discretividade Garantida</h4>
-                <p>O nome da empresa na fatura é: [NOME GENÉRICO DA EMPRESA LTDA]</p>
+                <p>SEDUÇÃO - Moda Íntima e Sex Shop</p>
             </div>
         </div>
-        <p class="copyright">&copy; 2025 Sua Marca. Todos os direitos reservados.</p>
+        <p class="copyright">&copy; 2025 Grupo TS. Todos os direitos reservados.</p>
     </footer>
 
     <script>
@@ -306,6 +305,7 @@
 </body>
 
 </html>
+
 
 
 
